--- a/chezmoi/.chezmoidata.yaml
+++ b/chezmoi/.chezmoidata.yaml
@@ -1,5 +1,8 @@
 # --- application version
 packages:
+  # renovate: datasource=github-tags depName=direnv/direnv
+  direnv_version: 2.32.3
+
   # renovate: datasource=github-tags depName=sharkdp/fd
   fd_version: v8.7.0
 
