--- a/chezmoi/.chezmoidata.yaml
+++ b/chezmoi/.chezmoidata.yaml
@@ -1,3 +1,7 @@
 # --- application version
-# renovate: datasource=github-tags depName=junegunn/fzf
-fzf_version: 0.42.0
+packages:
+  # renovate: datasource=github-tags depName=sharkdp/fd
+  fd_version: v8.7.0
+
+  # renovate: datasource=github-tags depName=junegunn/fzf
+  fzf_version: 0.42.0
