--- a/chezmoi/.chezmoidata.yaml
+++ b/chezmoi/.chezmoidata.yaml
@@ -4,7 +4,7 @@ packages:
   bat_version: v0.23.0
 
   # renovate: datasource=github-tags depName=direnv/direnv
-  direnv_version: 2.32.3
+  direnv_version: v2.32.3
 
   # renovate: datasource=github-tags depName=sharkdp/fd
   fd_version: v8.7.0
