--- a/chezmoi/.chezmoidata.yaml
+++ b/chezmoi/.chezmoidata.yaml
@@ -3,6 +3,9 @@ packages:
   # renovate: datasource=github-tags depName=sharkdp/bat
   bat_version: v0.23.0
 
+  # renovate: datasource=github-tags depName=aristocratos/btop
+  btop_version: v1.2.13
+
   # renovate: datasource=github-tags depName=dandavison/delta
   delta_version: 0.16.5
 
