--- a/chezmoi/.chezmoidata.yaml
+++ b/chezmoi/.chezmoidata.yaml
@@ -17,3 +17,6 @@ packages:
 
   # renovate: datasource=github-tags depName=junegunn/fzf
   fzf_version: 0.42.0
+
+  # renovate: datasource=github-tags depName=starship/starship
+  starship_version: v1.16.0
