--- a/chezmoi/.chezmoidata.yaml
+++ b/chezmoi/.chezmoidata.yaml
@@ -18,5 +18,8 @@ packages:
   # renovate: datasource=github-tags depName=junegunn/fzf
   fzf_version: 0.42.0
 
+  # renovate: datasource=github-tags depName=tummychow/git-absorb
+  git_absorb_version: 0.6.11
+
   # renovate: datasource=github-tags depName=starship/starship
   starship_version: v1.16.0
