--- a/chezmoi/dot_config/starship.toml
+++ b/chezmoi/dot_config/starship.toml
@@ -64,7 +64,7 @@ truncation_length = 16
 disabled = false
 ahead = "⇡${count}"
 behind = "⇣${count}"
-conflicted = "="
+conflicted = "[=${count} ](fg:bright-yellow bg:bright-black)"
 deleted = "[-${count} ](fg:bright-red bg:bright-black)"
 diverged = "↑${ahead_count} ⇣${behind_count}"
 format = "[ ]($style inverted)$all_status[$ahead_behind]($style bg:bright-white inverted)[]($style) "
