--- a/chezmoi/dot_config/starship.toml
+++ b/chezmoi/dot_config/starship.toml
@@ -1,5 +1,5 @@
 add_newline = false
-format = "$line_break$os$git_branch$git_status$fill $conda$python$vagrant$fill $aws$azure$gcloud$kubernetes$fill$cmd_duration$status$line_break$line_break$sudo$username$hostname$directory$character"
+format = "$line_break$os$git_branch$git_status$fill $conda$python$vagrant$fill $aws$azure$gcloud$kubernetes$pulumi$fill$cmd_duration$status$line_break$line_break$sudo$username$hostname$directory$character"
 
 [aws]
 disabled = false
@@ -25,9 +25,11 @@ vimcmd_visual_symbol = "[⑆](purple bold)›"
 
 [cmd_duration]
 disabled = false
-format = " []($style)[[ ]($style inverted)$duration]($style inverted)[]($style) "
-min_time = 750
-style = "bright-yellow"
+format = " [$duration]($style)"
+min_time = 0
+show_milliseconds = true
+show_notifications = true
+style = "white bold"
 
 [conda]
 disabled = false
@@ -90,8 +92,8 @@ symbol = "󱃾"
 
 [os]
 disabled = false
-format = "[](fg:$style)[$symbol]($style inverted)[]($style) "
-style = "blue"
+format = " [$symbol]($style)  "
+style = "white bold"
 
   [os.symbols]
   Alpine = ""
@@ -130,6 +132,12 @@ style = "blue"
   Unknown = ""
   Windows = ""
   openSUSE = ""
+
+[pulumi]
+disabled = false
+format = "[](black)[$symbol ](fg:bright-white bg:black)[ $stack]($style bg:black inverted)[]($style) "
+style = "bright-purple"
+symbol = ""
 
 [python]
 disabled = false
