--- a/ci/ubuntu/Dockerfile
+++ b/ci/ubuntu/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/debian:bookworm-slim
+FROM docker.io/library/ubuntu:jammy
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
