--- a/chezmoi/.chezmoidata.yaml
+++ b/chezmoi/.chezmoidata.yaml
@@ -1,13 +1,58 @@
 # --- application version
 packages:
-  # renovate: datasource=github-tags depName=aristocratos/btop
-  btop_version: v1.3.2
+  btop:
+    # renovate: datasource=github-tags depName=aristocratos/btop
+    version: latest
+    release_names:
+      linux/amd64: btop-x86_64-linux-musl.tbz 
+      linux/arm: btop-arm-linux-musleabi.tbz 
+      linux/arm64: btop-aarch64-linux-musl.tbz 
 
-  # renovate: datasource=github-tags depName=direnv/direnv
-  direnv_version: v2.34.0
+  direnv:
+    # renovate: datasource=github-tags depName=direnv/direnv
+    version: latest
+    release_names:
+      linux/amd64: direnv.linux-amd64
+      linux/arm: direnv.linux-arm
+      linux/arm64: direnv.linux-arm64
+      darwin/amd64: direnv.darwin-amd64
+      darwin/arm64: direnv.darwin-arm64
 
-  # renovate: datasource=github-tags depName=jdx/mise
-  mise_version: v2024.7.3
+  lazygit:
+    # renovate: datasource=github-tags depName=jesseduffield/lazygit
+    version: latest
+    release_names:
+      linux/amd64: lazygit_*_Linux_x86_64.tar.gz
+      linux/arm: lazygit_*_Linux_armv6.tar.gz
+      linux/arm64: lazygit_*_Linux_arm64.tar.gz
+      darwin/amd64: lazygit_*_Darwin_x86_64.tar.gz
+      darwin/arm64: lazygit_*_Darwin_arm64.tar.gz
 
-  # renovate: datasource=github-tags depName=jdx/usage
-  usage_version: v0.3.0
+  mise:
+    # renovate: datasource=github-tags depName=jdx/mise
+    version: latest
+    release_names:
+      linux/amd64: mise-*-linux-x64
+      linux/arm: mise-*-linux-armv7
+      linux/arm64: mise-*-linux-arm64
+      darwin/amd64: mise-*-macos-x64
+      darwin/arm64: mise-*-macos-arm64
+
+  usage:
+    # renovate: datasource=github-tags depName=jdx/usage
+    version: latest
+    release_names:
+      linux/amd64: usage-x86_64-unknown-linux-gnu.tar.gz 
+      linux/arm64: usage-aarch64-unknown-linux-gnu.tar.gz 
+      darwin/amd64: usage-universal-apple-darwin.tar.gz 
+      darwin/arm64: usage-universal-apple-darwin.tar.gz 
+
+  zoxide:
+    # renovate: datasource=github-tags depName=ajeetdsouza/zoxide
+    version: latest
+    release_names:
+      linux/amd64: zoxide-*-x86_64-unknown-linux-musl.tar.gz
+      linux/arm: zoxide-*-armv7-unknown-linux-musleabihf.tar.gz
+      linux/arm64: zoxide-*-aarch64-unknown-linux-musl.tar.gz
+      darwin/amd64: zoxide-*-x86_64-apple-darwin.tar.gz
+      darwin/arm64: zoxide-*-aarch64-apple-darwin.tar.gz
